--- a/files/style(3).css
+++ b/files/style(3).css
@@ -95,14 +95,21 @@
 }
 
 .img-title {
-	Display:block;
+	display:block;
 	position: relative;
     width: 80%;
     height: auto;
+    margin-left:15px;
 	background: transparent;
-	
-	
 }
+	@media (min-height: 800px) and (max-width: 1000px){
+	.img-title {
+	margin-left:-2.5px;
+		}
+	}
+	
+	
+
 
 .redesign-header__menu-item_js_hover {
 
