--- a/files/style.css
+++ b/files/style.css
@@ -387,4 +387,6 @@ border:1px;border-width:1px;border-radius:.375rem;padding: 5px;margin-right:0px;
 	  justify-content: flex-end;
 	  grid-area: 1 / 3 / 1 / 4;
 	}
-	
+
+
+.playing3 .b-popup_slow-btn__wrapper{opacity:0;}
