--- a/files/style.css
+++ b/files/style.css
@@ -389,4 +389,4 @@ border:1px;border-width:1px;border-radius:.375rem;padding: 5px;margin-right:0px;
 	}
 
 
-.playing2 .b-popup_slow-btn__wrapper{visibility:hidden!important;}
+.playing2 > .button_hide{visibility:hidden!important;}
