--- a/files/style.css
+++ b/files/style.css
@@ -388,4 +388,4 @@ border:1px;border-width:1px;border-radius:.375rem;padding: 5px;margin-right:0px;
 	  grid-area: 1 / 3 / 1 / 4;
 	}
 
-
+/*! .playing2 > .button_hide{visibility:hidden!important;}*/
